@@ -1,0 +1,26 @@
+#ifndef KGE_FILESYSTEM_H
+#define KGE_FILESYSTEM_H
+
+namespace kge
+{
+	namespace io
+	{
+		class FileSysem
+		{
+		public:
+
+			//! Constructor
+			FileSysem();
+
+			//! Destructor
+			~FileSysem();
+
+
+
+		}; // FileSysem
+
+	} // io
+
+} // kge
+
+#endif // KGE_FILESYSTEM_H
