@@ -5,3 +5,6 @@
 	* Renderer_d3d9
 	- (Add) VertexBufferDX9 class added for working with Vertex buffers.
 	- (Add) IndexBufferDX9 class added for working with index buffers.
+* FileSystem
+	- (Add) FileSystemManager
+	- (Add) FileSystem
